Big update to website. Almost finished!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>MWC Induction - {{ page.title }}</title>
+      <title>Bi1 - {{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
 
       <!-- syntax highlighting CSS -->
@@ -35,6 +35,7 @@
                 </a>
               </li>
             {% endfor %}
+            <li> <a class="post-title" href="http://piazza.com/caltech/spring2017/bi1"> Piazza </a</li
           </ul>
         </div>
         <div class="footer">
