make logo clickable

--- a/_layouts/2023_default.html
+++ b/_layouts/2023_default.html
@@ -25,7 +25,7 @@
     <div class="site">
       <div class="sidebar" id="sidebar">
         <div class="header">
-          <h1 class="title"><img id="logo" src="{{ site.baseurl }}/2023/assets/images/bi1.png">
+          <h1 class="title"><a href="{{ site.baseurl }}/2023/index"><img id="logo" src="{{ site.baseurl }}/2023/assets/images/bi1.png"></a></h1>
           <span class="tagline"></span>
         </div>
 
