--- a/2023/assets/css/main.css
+++ b/2023/assets/css/main.css
@@ -8,6 +8,7 @@
   --text: #444;
   --light: #777;
   --link: #e74c3c;
+  --white: #fafbfc;
 }
 
 * {
@@ -169,16 +170,20 @@ nav {
   margin-bottom: 1.25em;
 }
 
-
 .post h2 {
   margin-top: 1.25em;
   margin-left: -0.5em;
   margin-bottom: 1.25em;
   border-bottom: 1px solid #3E4651;
-	border-bottom-left-radius: 4px;
 	border-left: 8px solid #3E4651;
   padding-left: 0.5em;
+  padding-top: 0.25em;
+}
 
+.post h3 {
+  margin-top: 1.25em;
+  margin-left: -0.5em;
+  margin-bottom: 1.25em;
 }
 
 .post blockquote {
@@ -339,53 +344,48 @@ code {
   max-width: 200px;
 }
 
-* Table styling */
 table {
-	width: 80%;
-	font-size: 10pt;
+	/* max-width: 80%; */
 	margin: 10px;
 	border-collapse: collapse;
-
 }
 
 th {
 	text-align: center;
-	background-color: #f2f2f2;
-	border-bottom: 2px solid #4b4b4b;
-	padding: 5px;
+	background-color: #333;
+  color: var(--white);
+	padding: 5px 10px;
 }
 
-
 tr {
-	border-bottom: 1px solid #000000;
 	-transition:.2s;
 	-ms-transition:.2s;
 	-moz-transition:.2s;
 	-webkit-transition:.2s;
 	transition:.2s;
+}
 
+tr:nth-child(even){
+  background-color: #f2f2f2;
 }
 
 tr:hover {
-	background-color: #fff2ec;
-	border-bottom: 1px solid #2b2b2b;
+	background-color: #ddd;
 	-transition:.2s;
 	-ms-transition:.2s;
 	-moz-transition:.2s;
 	-webkit-transition:.2s;
 	transition:.2s;
-
 }
-
 
 td {
 	padding: 5px 10px;
 	max-width: 1000px;
-  /*border-bottom: 1px solid #3c3c3c;*/
-  border-bottom: 1px solid #3c3c3c;
-
 }
 
+th, td {
+  border: 1px solid #333;
+}
 /*
 /* Colophon
 /*
