--- a/2023/assets/css/main.css
+++ b/2023/assets/css/main.css
@@ -138,10 +138,19 @@ nav {
   color: #787878;
 }
 
-#cover-photo-container,
-#info-container {
-  display: block;}
-  /*width: 100%;}*/
+#cover-photo-container, #info-container {
+  display: block;
+  width: 100%;
+}
+
+#cover-photo {
+  object-fit: cover;
+  padding-bottom: 8em;
+  padding-top: 10px;
+  padding-left: 0em;
+  margin-left: -1em;
+  margin-right: 0;
+}
 
 #info-container {
   margin-top: 3em;
@@ -149,12 +158,22 @@ nav {
 }
 
 #title {
+  font: 3em "Raleway", sans-serif;
+  font-weight: 400;
   color: var(--text);
-  margin-bottom: 0.35em;
-  font-size: 3em;
-  line-height: 40px;
   text-transform: uppercase;
-  position: absolute;
+  margin-left: 0;
+  margin-top: -4.2em;
+  position: relative;
+  padding-bottom: 10px;
+  color: var(--white);
+  /* width: 30%; */
+}
+
+#title span {
+  background-color: black;
+  padding: 0px 10px;
+  background-clip: padding-box;
 }
 
 .post {
@@ -174,8 +193,8 @@ nav {
   margin-top: 1.25em;
   margin-left: -0.5em;
   margin-bottom: 1.25em;
-  border-bottom: 1px solid #3E4651;
-	border-left: 8px solid #3E4651;
+  border-bottom: 1px solid #333;
+	border-left: 8px solid #333;
   padding-left: 0.5em;
   padding-top: 0.25em;
 }
