--- a/2023/assets/css/main.css
+++ b/2023/assets/css/main.css
@@ -56,7 +56,7 @@ a img {
 /*
 /****************************************************************************/
 #logo {
-  max-width: 220px;
+  max-width: 200px;
 }
 
 nav a {
@@ -75,7 +75,7 @@ nav a:hover {
 .nav-list li {
   text-align: center;
   line-height: 1.75em;
-  max-width: 900px;
+  /* max-width: 900px; */
   padding: 10px;
 }
 
@@ -111,6 +111,7 @@ nav {
   margin-top: 1em;
   padding-top: 1.5em;
   padding-bottom: 1.25em;
+  /* display: inline-block; */
 }
 
 .footer {
@@ -294,8 +295,8 @@ code {
 .sidebar {
   float: left;
   width: 19%;
-  padding-left: 0em;
-  padding-right: 2.125em;
+  padding-left: 1em;
+  padding-right: 1em;
   border-right: 1px solid #e7e7e7;
 }
 
