--- a/2024/assets/css/main.css
+++ b/2024/assets/css/main.css
@@ -200,12 +200,18 @@ nav {
   padding-top: 0.25em;
 }
 
+.post h3 {
+  margin-top: 1.25em;
+  margin-left: -0.5em;
+  margin-bottom: 1.25em;
+}
+
 .post blockquote {
   max-width: 70%;
   padding: 10px 10px;
   margin-bottom: 1.45em;
   background-color: #ddd;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: 'Helvetica', Arial, sans-serif;
   font-size: 0.95rem;
 }
 
@@ -226,14 +232,14 @@ nav {
 }
 
 .post p {
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: 'Helvetica', Arial, sans-serif;
   font-size: 0.95rem;
   margin-bottom: 1.45em;
   text-align: justify;
 }
 
 .post ul, .post ol {
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: 'Helvetica', Arial, sans-serif;
   font-size: 0.95rem;
   margin-left: 2.35em;
   margin-bottom: 1.25em;
